@@ -1,3 +1,8 @@
+2006-05-25  Sebastien Pouliot  <sebastien@ximian.com> 
+
+	* TestRegion.cs: Added a new fixture that executes with UnmanagedCode
+	permission and test the [Get|From]Hrgn methods.
+
 2006-05-24 Gonzalo Paniagua Javier <gonzalo@ximian.com>
 
 	* TestBitmap.cs: new tests for the default format and the default file
